--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
     margin:auto;
     max-width:900px;
     min-height:100vh;
-    background-color:rgb(189, 188, 188);
+    /* background-color:rgb(189, 188, 188); */
+    background-color: aquamarine;
 }
 
 .modal{
@@ -20,23 +21,28 @@
     padding-bottom: 25px;
 }
 
+ul{
+    margin-top:25px;
+}
+
 ul li{
     list-style: none;
     font-size:15px;
     margin:10px;
     padding:3px;
     cursor: pointer;
-    border: solid black 1px;
+    border: solid grey 1px;
 }
 
 #next, #loadInfo{
     margin:30px;
     cursor:pointer;
-    border: solid black 1px;
+    border: solid grey 1px;
     padding:3px;
 }
 
 p{
+    margin: 10px;
     padding: 3px;
-    border: solid black 1px;
+    border: solid grey 1px;
 }
