--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     font-size:20px;
     font-weight: bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -15,6 +16,13 @@
 
 .modal{
     padding:30px;
+    padding-top:15px;
+}
+
+h1{
+    font-size:40px;
+    padding: 15px;
+    text-align: center;
 }
 
 #problem{
@@ -45,4 +53,5 @@ p{
     margin: 10px;
     padding: 3px;
     border: solid grey 1px;
+    background-color:white;
 }
