--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 .container{
     margin:auto;
-    max-width:960px;
+    max-width:1000px;
     min-height:100vh;
     background-color: rgb(164, 164, 255);
 }
@@ -62,6 +62,23 @@ p{
     background-color:white;
 }
 
+#punkty{
+    border: none;
+    background-color: rgb(164, 164, 255);
+    padding: 1px;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
 .hide{
     display:block;
+}
+
+footer{
+    display:flex;
+    width:95vw;
+}
+
+.copyr{
+    margin:auto;
 }
