--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,34 @@
     background-color: rgb(164, 164, 255);
 }
 
+nav{
+    width:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+nav ul{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:20px;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+.menu{
+    padding:5px;
+    background-color: yellowgreen;
+}
+
+.menu:hover{
+    background-color:white;
+}
+
 .modal{
     padding:30px;
     padding-top:15px;
@@ -73,6 +101,8 @@ p{
 .hide{
     display:block;
 }
+
+
 
 footer{
     display:flex;
