--- a/css/style.css
+++ b/css/style.css
@@ -5,46 +5,51 @@
     font-weight: bold;
     /* font-family: 'Roboto', sans-serif; */
     /* font-family: 'Slabo 27px', serif; */
-    font-family: 'Lora', serif;
+    /* font-family: 'Lora', serif; */
     color:rgba(7, 0, 32, 0.884)
 }
 
 .container{
-    margin:auto;
+    /* margin:auto; */
     max-width:1000px;
     min-height:100vh;
     background-color: rgb(164, 164, 255);
 }
 
 nav{
+    margin-bottom:30px;
+}
+
+/* nav{
     width:100%;
     display:flex;
     align-items:center;
     justify-content:center;
-}
+} */
 
-nav ul{
+/* nav ul{
     display:flex;
     align-items:center;
     justify-content:center;
     font-size:20px;
     text-decoration: none;
-}
+} */
 
-a{
+/* a{
     text-decoration: none;
-}
+} */
 
-.menu{
+/* .menu{
     padding:5px;
     background-color: yellowgreen;
 }
 
 .menu:hover{
     background-color:white;
-}
+} */
 
-.modal{
+.abc{
+    margin:15px;
     padding:30px;
     padding-top:15px;
 }
@@ -59,7 +64,7 @@ h1{
     padding-bottom: 25px;
 }
 
-ul{
+/* ul{
     margin-top:25px;
 }
 
@@ -70,9 +75,9 @@ ul li{
     padding:3px;
     cursor: pointer;
     border: solid grey 1px;
-}
+} */
 
-#next, #loadInfo, #prev{
+/* #next, #loadInfo, #prev{
     margin:30px;
     cursor:pointer;
     border: solid grey 1px;
@@ -82,6 +87,10 @@ ul li{
 
 #next:hover, #loadInfo:hover, #prev:hover{
     background-color:white;
+} */
+
+ul li{
+    cursor:pointer;
 }
 
 p{
@@ -104,11 +113,11 @@ p{
 
 
 
-footer{
+.page-footer{
     display:flex;
-    width:95vw;
-}
-
-.copyr{
     margin:auto;
+    max-width:945px;
+    justify-content: center;
+    align-items: center;
+    color:white;
 }
