--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ nav{
     margin:auto; 
 } */
 
+/* .tasksNumber{
+    border: "none";
+    font-size: "12px";
+    width:"50px";
+} */
+
 @media only screen and (max-width: 600px) {
     /* .abc, .choose{
         width:100%;
