responsive category items

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ nav{
 }
 
 @media only screen and (max-width: 600px) {
+    .collection-item{
+        font-size:15px;
+    }
 
     #problem, li, #info{
         font-size:13px;
