--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body{
     max-width:1000px;
     min-height:100vh;
     background-color: rgb(164, 164, 255);
+    background-color: rgb(29, 119, 122);
+    background-color: rgb(23, 93, 95);
     padding: 15px;
 }
 
@@ -131,10 +133,12 @@ p{
 
 #days, #hours, #minutes, #seconds{
     font-size:20px;
+    color:#b0ffff;
 }
 
 #s1, #s2, #s3, #s4{
     font-size:12px;
+    color:#b0ffff;
 }
 
 tr{
@@ -175,7 +179,8 @@ tr{
 
 #pomodoroCounter{
     font-family: 'Orbitron', sans-serif;
-    font-size:30px;
+    font-size:35px;
+    color:#b0ffff;
 }
 
 
