1 day, 3 days review works

--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,12 @@ tr{
         padding:15px;
     }
 }
+
+
+
+/* *************************CURVE************************* */
+@media only screen and (max-width: 600px){
+    .pomodoroSection{
+        padding:15px;
+    }
+}
