working on hovering answers

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
     background-color: rgb(164, 164, 255);
     background-color: rgb(29, 119, 122);
     background-color: rgb(23, 93, 95);
+    /* background-color:white; */
     padding: 15px;
 }
 
